requeridos